tests/contract_testcases/substrate/modifier/declare_02.sol

        contract c {
            modifier foo() payable {}
        }
// ---- Expect: diagnostics ----
// error: 3:28-35: modifier cannot have mutability specifier
